2008-03-23 Borut Razem <borut.razem AT siol.net>

	* src/pic/gen.h: Q&D solution for the bug, found by Jim Paris
	  and reverted it, since it was already fixed by Raphael ;-)

2008-03-22 Raphael Neider <rneider AT web.de>

	* src/SDCCicode.c (getPtrType): avoid unnecessary extra assignments
	  for PIC16 targets

2008-03-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (adjustArithmeticResult): fixed bug 1839299
	* support/regression/tests/bug1839277.c: added related testBug1839299

2008-03-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (opIsGptr, adjustArithmeticResult, genAddrOf, genAssign),
	* src/mcs51/gen.c (opIsGptr, adjustArithmeticResult, genAddrOf, genAssign):
	  fixed bug 1839277
	* src/mcs51/gen.c: throughout only output hex constants
	* src/SDCCicode.c (getPtrType, geniCodeCast): fixed code size regression
	* support/regression/tests/bug1839277.c: new, added

2008-03-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c (callFuncByName):
	  Used // instead of /**/ to fix compilation warning about nested comments.

2008-03-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (comparePtrType): fixed bug 1921073
	* support/regression/tests/bug1921073.c: new, added

2008-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/SDCCpeeph.c.c (callFuncByName):
	  Commented function parameters.

2008-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c (packRegsForAccUse2):
	  disabled a broken accumulator packing optimization (fixed #1292721).
	* support/regression/tests/bug-1292721: Regression test for #1292721.

2008-03-16 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (SetIrp,genNearPointerGet,genNearPointerSet):
	  fixed code bloat regression using a variant of patch #1915618

2008-03-16 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added section debugging macros, added SDCC
	  icon, changed startup menu for release distribution, code cleaning,