@@ -24,6 +24,22 @@ This file is generated automagicaly by gen_known_bugs.pl script.
         <td align="center"><font color="#000000"><b>Submitted By</b></font></td>
       </tr>
 <tr bgcolor="#dababa">
+  <td> 1912127 </td>
+  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1912127&amp;group_id=599&amp;atid=100599"> debug records generation </a></td>
+  <td>2008-03-11 12:14 </td>
+  <td align="center"> 5 </td>
+  <td>nobody</td>
+  <td>stephhouse</td>
+</tr>
+<tr bgcolor="#dababa">
+  <td> 1911325 </td>
+  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1911325&amp;group_id=599&amp;atid=100599"> Labels repeated in assembler </a></td>
+  <td>2008-03-10 12:00 </td>
+  <td align="center"> 5 </td>
+  <td>nobody</td>
+  <td>richwalker</td>
+</tr>
+<tr bgcolor="#dababa">
   <td> 1904314 </td>
   <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1904314&amp;group_id=599&amp;atid=100599"> Division is not reentrant </a></td>
   <td>2008-02-28 14:12 </td>
@@ -96,22 +112,6 @@ This file is generated automagicaly by gen_known_bugs.pl script.
   <td>bortel</td>
 </tr>
 <tr bgcolor="#dababa">
-  <td> 1839299 </td>
-  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1839299&amp;group_id=599&amp;atid=100599"> Same expression evaluated differently </a></td>
-  <td>2007-11-27 01:36 </td>
-  <td align="center"> 5 </td>
-  <td>nobody</td>
-  <td>bortel</td>
-</tr>
-<tr bgcolor="#dababa">
-  <td> 1839277 </td>
-  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1839277&amp;group_id=599&amp;atid=100599"> Implicit typecast from code to generic pointer is wrong </a></td>
-  <td>2007-11-27 00:51 </td>
-  <td align="center"> 5 </td>
-  <td>nobody</td>
-  <td>bortel</td>
-</tr>
-<tr bgcolor="#dababa">
   <td> 1839266 </td>
   <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1839266&amp;group_id=599&amp;atid=100599"> Constant subexpression not evaluted at compile time </a></td>
   <td>2007-11-27 00:28 </td>
@@ -126,14 +126,6 @@ This file is generated automagicaly by gen_known_bugs.pl script.
   <td align="center"> 5 </td>
   <td>nobody</td>
   <td>sb-sf</td>
-</tr>
-<tr bgcolor="#dababa">
-  <td> 1832562 </td>
-  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1832562&amp;group_id=599&amp;atid=100599"> Missing config defines for 18F4455/4550 and 18F4620 </a></td>
-  <td>2007-11-15 08:11 </td>
-  <td align="center"> 5 </td>
-  <td>nobody</td>
-  <td>azhyd</td>
 </tr>
 <tr bgcolor="#dababa">
   <td> 1818857 </td>
@@ -416,14 +408,6 @@ This file is generated automagicaly by gen_known_bugs.pl script.
   <td>gaufillet</td>
 </tr>
 <tr bgcolor="#dababa">
-  <td> 1579949 </td>
-  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1579949&amp;group_id=599&amp;atid=100599"> Fatal internal compiler error </a></td>
-  <td>2006-10-18 12:23 </td>
-  <td align="center"> 5 </td>
-  <td>nobody</td>
-  <td>nobody</td>
-</tr>
-<tr bgcolor="#dababa">
   <td> 1579664 </td>
   <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1579664&amp;group_id=599&amp;atid=100599"> typedef struct foo foo; </a></td>
   <td>2006-10-18 06:10 </td>
@@ -534,14 +518,6 @@ This file is generated automagicaly by gen_known_bugs.pl script.
   <td align="center"> 5 </td>
   <td>nobody</td>
   <td>frief</td>
-</tr>
-<tr bgcolor="#dababa">
-  <td> 1505811 </td>
-  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1505811&amp;group_id=599&amp;atid=100599"> Bad &#39;for&#39; loop optimization </a></td>
-  <td>2006-06-14 00:07 </td>
-  <td align="center"> 5 </td>
-  <td>nobody</td>
-  <td>gaufillet</td>
 </tr>
 <tr bgcolor="#dababa">
   <td> 1503239 </td>
@@ -662,22 +638,6 @@ This file is generated automagicaly by gen_known_bugs.pl script.
   <td align="center"> 5 </td>
   <td>nobody</td>
   <td>spth</td>
-</tr>
-<tr bgcolor="#dababa">
-  <td> 1292721 </td>
-  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1292721&amp;group_id=599&amp;atid=100599"> variable load wrongly optimized away </a></td>
-  <td>2005-09-16 02:30 </td>
-  <td align="center"> 5 </td>
-  <td>nobody</td>
-  <td>ttensi</td>
-</tr>
-<tr bgcolor="#dababa">
-  <td> 1255403 </td>
-  <td><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1255403&amp;group_id=599&amp;atid=100599"> printf_fast_f SIGN and leading spaces problem </a></td>
-  <td>2005-08-09 18:24 </td>
-  <td align="center"> 5 </td>
-  <td>pjs</td>
-  <td>shalomj</td>
 </tr>
 <tr bgcolor="#dababa">
   <td> 1224197 </td>
@@ -815,5 +775,5 @@ This file is generated automagicaly by gen_known_bugs.pl script.
       </tr>
     </table>
   </body>
-<p><b>Number of open bugs: 97</b></p>
+<p><b>Number of open bugs: 92</b></p>
 </html>
